# soa

./: .gitignore  Cargo.toml  README.md  soa.example.toml  soa.toml
.claude/: settings.local.json
skills/: careful-editing.md
src/: approval.rs  config.rs  diff.rs  evals.rs  evolve.rs  files.rs  git.rs  hooks.rs  insights.rs  main.rs  mcp.rs  mentions.rs  model.rs  persistence.rs  provider.rs  reflect.rs  runs.rs  skills.rs  stage.rs  tools.rs
src/providers/: anthropic_messages.rs  mod.rs  openai_chat_completions.rs  sse.rs
src/tui/: app.rs  completion.rs  mod.rs  store.rs  ui.rs
