[package]
name = "soa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.28"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "1.4.2"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "2.1.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
textwrap = "0.16.2"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tui-textarea = "0.7"
